--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -119,7 +119,7 @@
                 <div class="is-flex is-align-items-center is-hidden-mobile" style="min-width: 100px;">
                     <i class="bi bi-zoom-in is-size-7 mr-2 opacity-50"></i>
                     <input id="gridZoom" class="slider is-small is-primary m-0" type="range" min="180" max="400"
-                        step="10" value="240" oninput="updateGridZoom(this.value)">
+                        step="10" value="240">
                 </div>
 
                 <div class="buttons has-addons m-0 view-toggle" id="viewToggleButtons">
