Renamed settings.js to settings_v2026.js to bypass persistent file-level caching

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1176,5 +1176,5 @@
 
 
 
-                    <script src="/static/js/settings.js?v={{ build_version }}"></script>
+                    <script src="/static/js/settings_v2026.js?v={{ build_version }}"></script>
                     {% endblock %}
